# worship-support

./: .env.development.example  .gitignore  .mcp.json  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  vercel.json
.claude/: MEMORY.md  feedback_controller_flat.md  feedback_pacing.md  settings.json  shared.md
.devcontainer/: devcontainer.json
.docker/: .env  Dockerfile.develop.api  Dockerfile.develop.mcp  Dockerfile.develop.workspace  docker-compose.develop.yml
.env/: .env.develop.example  .env.production.example
architecture-xxjiinn/: architecture-decisions.md  meeting-architecture-summary.md  meeting-auth-architecture-explained.md
architecture-xxjiinn/backend/: .gitignore  pyproject.toml
architecture-xxjiinn/backend/app/: main.py
architecture-xxjiinn/backend/app/core/: audit.py  auth.py  config.py  container.py  database.py  error_codes.py  error_mapping.py  http.py  security.py
architecture-xxjiinn/backend/app/domains/audit/: repository.py
architecture-xxjiinn/backend/app/domains/auth/: cookies.py  endpoint.py  repository.py  schema.py  usecase.py
architecture-xxjiinn/backend/app/domains/project/: domain.py  endpoint.py  repository.py  schema.py  usecase.py
architecture-xxjiinn/backend/app/domains/user/: domain.py  endpoint.py  repository.py  usecase.py
architecture-xxjiinn/backend/app/domains/workspace/: domain.py  endpoint.py  model.py  repository.py  schema.py  usecase.py
docs/: DDD-docs.txt  architecture.md  domain.txt  project.txt  to-do.txt
scripts/: check-ui-patterns.mjs
supabase/: config.toml
(+189 files in other folders)
