[project]
name = "ws-backend"
version = "0.1.0"
description = "Worship Support backend scaffold"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
